--- a/ScenekitStarter/PhongPointLightParameterView.xib
+++ b/ScenekitStarter/PhongPointLightParameterView.xib
@@ -19,23 +19,23 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe" userLabel="PhongPointLightParameterView">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="425"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="170"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wnb-hJ-PlM">
-                    <rect key="frame" x="18" y="380" width="117" height="17"/>
+                    <rect key="frame" x="18" y="125" width="117" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Material Specularity" id="n9T-8Z-Ayb">
-                        <font key="font" size="12" name=".HelveticaNeueDeskInterface-Regular"/>
+                        <font key="font" metaFont="cellTitle"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oHy-lz-2Fs">
-                    <rect key="frame" x="141" y="379" width="92" height="17"/>
+                    <rect key="frame" x="141" y="124" width="92" height="17"/>
                     <sliderCell key="cell" controlSize="small" state="on" alignment="left" maxValue="1" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="P9F-7g-K9s"/>
                 </slider>
                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tv6-vO-38d">
-                    <rect key="frame" x="246" y="378" width="45" height="22"/>
+                    <rect key="frame" x="246" y="123" width="45" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="y8R-mP-GOe">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -43,31 +43,31 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AD3-ei-Skz">
-                    <rect key="frame" x="18" y="319" width="117" height="17"/>
+                    <rect key="frame" x="18" y="64" width="117" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Ambient Color" id="1fE-RZ-fwg">
-                        <font key="font" size="12" name=".HelveticaNeueDeskInterface-Regular"/>
+                        <font key="font" metaFont="cellTitle"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QTn-aS-KCu">
-                    <rect key="frame" x="141" y="319" width="44" height="23"/>
+                    <rect key="frame" x="141" y="64" width="44" height="23"/>
                     <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </colorWell>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qfx-ut-T3c">
-                    <rect key="frame" x="18" y="350" width="117" height="17"/>
+                    <rect key="frame" x="18" y="95" width="117" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Material Shininess" id="8vT-KQ-daw">
-                        <font key="font" size="12" name=".HelveticaNeueDeskInterface-Regular"/>
+                        <font key="font" metaFont="cellTitle"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5yt-tz-YHz">
-                    <rect key="frame" x="141" y="349" width="92" height="17"/>
+                    <rect key="frame" x="141" y="94" width="92" height="17"/>
                     <sliderCell key="cell" controlSize="small" state="on" alignment="left" maxValue="128" doubleValue="10.800000000000001" tickMarkPosition="above" sliderType="linear" id="VNA-Hc-fp4"/>
                 </slider>
                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KI3-8n-g38">
-                    <rect key="frame" x="246" y="348" width="45" height="22"/>
+                    <rect key="frame" x="246" y="93" width="45" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="yzs-75-NOC">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -75,13 +75,13 @@
                     </textFieldCell>
                 </textField>
                 <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nu7-Dz-9XU">
-                    <rect key="frame" x="141" y="288" width="44" height="23"/>
+                    <rect key="frame" x="141" y="33" width="44" height="23"/>
                     <color key="color" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </colorWell>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BLT-PE-lHC">
-                    <rect key="frame" x="18" y="288" width="117" height="17"/>
+                    <rect key="frame" x="18" y="33" width="117" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Light Color" id="S14-TI-tX8">
-                        <font key="font" size="12" name=".HelveticaNeueDeskInterface-Regular"/>
+                        <font key="font" metaFont="cellTitle"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
