--- a/ScenekitStarter/PhongPointLightParameterView.xib
+++ b/ScenekitStarter/PhongPointLightParameterView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6185.11" systemVersion="14A298i" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6205" systemVersion="14A314h" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="101000" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6185.11"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6205"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CWHPhongPointLightParameterViewController">
@@ -32,11 +32,10 @@
                 </textField>
                 <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oHy-lz-2Fs">
                     <rect key="frame" x="141" y="124" width="92" height="17"/>
-                    <sliderCell key="cell" controlSize="small" state="on" alignment="left" maxValue="1" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="P9F-7g-K9s">
-                        <connections>
-                            <action selector="setMaterialSpecularity:" target="-2" id="p8W-oV-vl3"/>
-                        </connections>
-                    </sliderCell>
+                    <sliderCell key="cell" controlSize="small" state="on" alignment="left" maxValue="1" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="P9F-7g-K9s"/>
+                    <connections>
+                        <action selector="updateMaterialSpecularity:" target="-2" id="UU4-FC-rSP"/>
+                    </connections>
                 </slider>
                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tv6-vO-38d">
                     <rect key="frame" x="246" y="123" width="45" height="22"/>
@@ -58,7 +57,7 @@
                     <rect key="frame" x="141" y="64" width="44" height="23"/>
                     <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
-                        <action selector="setAmbientColor:" target="-2" id="rdD-eJ-t73"/>
+                        <action selector="updateAmbientColor:" target="-2" id="IEX-jc-Aes"/>
                     </connections>
                 </colorWell>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qfx-ut-T3c">
@@ -73,7 +72,7 @@
                     <rect key="frame" x="141" y="94" width="92" height="17"/>
                     <sliderCell key="cell" controlSize="small" state="on" alignment="left" maxValue="128" doubleValue="10.800000000000001" tickMarkPosition="above" sliderType="linear" id="VNA-Hc-fp4"/>
                     <connections>
-                        <action selector="setShininess:" target="-2" id="jg7-Dq-83A"/>
+                        <action selector="updateShininess:" target="-2" id="EeW-hB-NzZ"/>
                     </connections>
                 </slider>
                 <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nu7-Dz-9XU">
