--- a/ScenekitStarter/CWHLightingView.xib
+++ b/ScenekitStarter/CWHLightingView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6185.11" systemVersion="14A298i" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6205" systemVersion="14A314h" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6185.11"/>
-        <plugIn identifier="com.apple.SceneKitIBPlugin" version="6185.11"/>
+        <deployment defaultVersion="101000" identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6205"/>
+        <plugIn identifier="com.apple.SceneKitIBPlugin" version="6205"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="LightingViewController">
+        <customObject id="-2" userLabel="File's Owner" customClass="CWHLightingViewController">
             <connections>
-                <outlet property="lightingView" destination="qxu-gg-2Um" id="Tvy-S1-Kyb"/>
-                <outlet property="view" destination="0Hr-EF-VBH" id="mJY-LR-qTa"/>
+                <outlet property="lightingView" destination="qxu-gg-2Um" id="4Mv-4H-zj1"/>
+                <outlet property="view" destination="0Hr-EF-VBH" id="ce4-wc-tif"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -17,7 +18,7 @@
             <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <sceneView autoenablesDefaultLighting="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qxu-gg-2Um" customClass="LightingView">
+                <sceneView autoenablesDefaultLighting="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qxu-gg-2Um" customClass="CWHLightingView">
                     <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </sceneView>
